Fixes #13 for word wrapping

--- a/src/components/CardDetails.module.css
+++ b/src/components/CardDetails.module.css
@@ -11,7 +11,9 @@
 
 .fullText {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-end;
+  justify-content: center;
 }
 
 .furiKanji {
